# webgl2-particle-physics

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  rollup.config.js  tsconfig.json
demo/: index.html
docs/: index.html
particle_system_wasm/: Cargo.toml  build.rs
particle_system_wasm/src/: graphics.rs  lib.rs  particle.rs  renderer.rs
particle_system_wasm/src/shaders/: draw.frag  draw.vert  partition.frag  partition.vert  update.frag  update.vert
public/: index.html
src/: index.ts  wasm.ts
src/components/: App.svelte  ParticleRenderer.svelte
src/shaders/: particle.fs.glsl  particle.vs.glsl
