[package]
name = "particle_system_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
glam = "0.24.0"
log = "0.4.18"
winit = "0.28.6"
thiserror = "1.0.40"
anyhow = "1.0.71"
wgpu = { version = "0.16.1", features = ["webgl", "spirv"] }

[build-dependencies]
shaderc = "0.8.2"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
web-sys = { version = "0.3.63", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext"
] }