[package]
name = "particle_system_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
glam = { version = "0.24.0", features = ["bytemuck"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
log = "0.4.18"
winit = "0.28.6"
thiserror = "1.0.40"
anyhow = "1.0.71"
wrend = "0.3.6"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.63"
web-sys = { version = "0.3.63", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlTexture",
    "WebGlRenderbuffer"
] }